--- a/index.html
+++ b/index.html
@@ -57,57 +57,59 @@
         </div>
     </section>
 
+    <section class="all">
+        <h1 class="titulo-projetos">
+            Habilidades
+        </h1>
+        <section class="section-cards">
+            <div class="cards">
+                <div class="imagem-card">
+                    <img class="img-card" src="/src/img/criatividade.png" alt="">
+                </div>
+                <div class="text-dard">
+                    <h1 class="titulo-card">
+                        Criatividade!
+                    </h1>
+                    <p class="descricao-card">
+                        Transformo ideias em soluções inovadoras, trazendo frescor e intensidade a cada linha de código.
+                        Cada projeto é uma oportunidade de criar algo único, sempre buscando a melhor forma de fazer as
+                        coisas.
+                    </p>
+                </div>
+            </div>
+            <div class="cards">
+                <div class="imagem-card">
+                    <img class="img-card" src="/src/img/equipe.png" alt="">
+                </div>
+                <div class="text-dard">
+                    <h1 class="titulo-card">
+                        Trabalho em equipe
+                    </h1>
+                    <p class="descricao-card">
+                        Juntos, podemos unir forças, compartilhar ideias e
+                        superar qualquer desafio. Cada membro traz algo único, e é isso que faz o trabalho em equipe ser
+                        tão
+                        poderoso!
+                    </p>
+                </div>
+            </div>
+            <div class="cards">
+                <div class="imagem-card">
+                    <img class="img-card" src="/src/img/estudo.png" alt="">
+                </div>
+                <div class="text-dard">
+                    <h1 class="titulo-card">
+                        Sempre aprendendo
+                    </h1>
+                    <p class="descricao-card">
+                        Posso até não saber de cara, mas enquanto nada me impedir de aprender, farei o que for
+                        necessário
+                        Acredito que o aprendizado é uma jornada contínua.
+                    </p>
+                </div>
+            </div>
+        </section>
     </section>
-    <h1 class="titulo-projetos">
-        Habilidades
-    </h1>
-    <section class="section-cards">
-        <div class="cards">
-            <div class="imagem-card">
-                <img class="img-card" src="/src/img/criatividade.png" alt="">
-            </div>
-            <div class="text-dard">
-                <h1 class="titulo-card">
-                    Criatividade!
-                </h1>
-                <p class="descricao-card">
-                    Transformo ideias em soluções inovadoras, trazendo frescor e intensidade a cada linha de código.
-                    Cada projeto é uma oportunidade de criar algo único, sempre buscando a melhor forma de fazer as
-                    coisas.
-                </p>
-            </div>
-        </div>
-        <div class="cards">
-            <div class="imagem-card">
-                <img class="img-card" src="/src/img/equipe.png" alt="">
-            </div>
-            <div class="text-dard">
-                <h1 class="titulo-card">
-                    Trabalho em equipe
-                </h1>
-                <p class="descricao-card">
-                    Juntos, podemos unir forças, compartilhar ideias e
-                    superar qualquer desafio. Cada membro traz algo único, e é isso que faz o trabalho em equipe ser tão
-                    poderoso!
-                </p>
-            </div>
-        </div>
-        <div class="cards">
-            <div class="imagem-card">
-                <img class="img-card" src="/src/img/estudo.png" alt="">
-            </div>
-            <div class="text-dard">
-                <h1 class="titulo-card">
-                    Sempre aprendendo
-                </h1>
-                <p class="descricao-card">
-                    Posso até não saber de cara, mas enquanto nada me impedir de aprender, farei o que for necessário
-                    Acredito que o aprendizado é uma jornada contínua.
-                </p>
-            </div>
-        </div>
-    </section>
-
     <section class="second-section">
         <div class="container-projetos">
             <h1 class="titulo-projetos">
