--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -105,7 +105,7 @@
             </div>
         </div>
     </section>
-    <section class="about-me">
+    <section class="about-me footer">
         <div class="txt4">
             <h1 class="titulo4">
                 Gosto musical e mais sobre mim!
