--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -33,6 +33,9 @@
                     <a href="mailto:loziglioli@gmail.com" class="img-modal">
                         <img src="/src/img/email.svg" alt="E-mail" width="50">
                     </a>
+                    <a href="https://github.com/LoZiglioli" class="img-modal">
+                        <img src="/src/img/png-transparent-github-computer-icons-github-logo-monochrome-head-thumbnail.png" alt="E-mail" width="50">
+                    </a>
                 </div>
             </div>
         </div>
