--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a href="mailto:loziglioli@gmail.com" class="img-modal">
                         <img src="/src/img/email.svg" alt="E-mail" width="50">
                     </a>
-                    <a href="https://github.com/LoZiglioli" class="img-modal">
+                    <a href="https://github.com/Lo-Zig" class="img-modal">
                         <img src="/src/img/png-transparent-github-computer-icons-github-logo-monochrome-head-thumbnail.png" alt="E-mail" width="50">
                     </a>
                 </div>
